# openstandardagents

./: .add-npm-token.sh  .cursorrules  .devfile.yaml  .dockerignore  .env.development  .env.example  .env.local  .eslintrc.cjs  .eslintrc.js  .eslintrc.json  .gitignore  .gitkeep  .gitlab-ci-old.yml  .gitlab-ci-playwright.yml  .gitlab-ci-simple.yml  .gitlab-ci-test.txt  .gitlab-ci-trigger  .gitlab-ci-validation.yml  .gitlab-ci-visual.yml  .gitlab-ci.yml  .gitlab-ci.yml.bak  .gitlab-ci.yml.old  .gitlab-components-usage.md  .lefthook.yml  .migration-state.json  .npmignore  .npmrc  .ossa.config.yaml  .ossa.yaml  .prettierignore  .redocly.yaml  .releaserc.json  .spectral.yaml  .spectral.yml  .tddai-branch-protection.json  .version-sync-verified  .version.json  .wiki-config.json  20-agent-deployment-config.yml  20-agent-ecosystem-status.json  (+202 more)
.agents/: .gitkeep  CONSOLIDATION_PLAN.md  DRUPAL-AGENTS-MIGRATION-PLAN.md  IMPLEMENTATION.md  INDEX.md  README.md  README.old.md  SUMMARY.md  agent-registry.yml  agent.yml  bot-architecture-validator.ossa.yaml  bot-ci-pipeline.ossa.yaml  bot-dependency-updater.ossa.yaml  bot-gitlab-ci-fixer.ossa.yaml  bot-mr-reviewer.ossa.yaml  bot-ossa-validator.ossa.yaml  bot-security-scanner.ossa.yaml  catalog.json  deployment-report-v0.1.7.md  local-mesh-config.yaml  openapi.yml  orchestration-agent.yml  ossa-validator-agent.yml  registry.yaml  registry.yml  roadmap-update-report.json  safe-syntax-scanner.js  social-agent-aiflow.ossa.yaml  syntax-analysis-summary.md  update-all-roadmaps.js  validation-report-v0.1.7.json
.agents-backup-1759500544949/: README.md  openapi.yml  registry.yml  tsconfig.base.json  workspace.json
.agents-workspace/: README.md
.buildkit/: agent-first-policy.sh  branching-workflow.json  hooks.yaml  install-buildkit-setup.cjs
.claude/: settings.json  settings.local.json  swarm-config.json
.cursor/: environment.json  guardrails.json  settings.json  worktrees.json
.github/: AGENTS.md  PULL_REQUEST_TEMPLATE.md  SUPPORT.md  dependabot.yml  stale.yml
.gitlab/: .branch-protection.json  AGENT_DRIVEN_CI_PROPOSAL.md  AUDIT-SUMMARY.md  AUTOMATED-RELEASE-WORKFLOW.md  BRANCH_PROTECTION.md  CODEOWNERS  CROSS-REFERENCES.md  DUO-AGENT-PLATFORM.md  FIX-MR-TARGETS.md  IMPLEMENTATION-COMPLETE.md  ISSUE-BIN-ENHANCEMENT.md  KAS_AUDIT.md  MERGE_TRAIN.md  MERGE_WORKFLOW.md  PRE-PUSH-VALIDATION.md  QUICK-START.md  README.md  REVIEW_APP_SETUP.md  WIKI-MIGRATION-GUIDE.md  branch-protection.md  duo-agent-config.yaml  duo_workflow.yml  issue-schema-duplication.md  labels-structure.md  merge_request_settings.yml  wiki-publish-manifest.json  wiki-publish-runner.cjs  wiki-publish.cjs
.husky/: pre-commit
.kiro/: config.json
.ossa/: project.ossa.yaml
.well-known/: agent-card.json
Old_use_for_migration/: .gitignore  .lefthook.yml  .npmrc  CHANGELOG.md  CLAUDE.md  LICENSE  ROADMAP.md  validate-e2e-tests.js  vitest.config.ts
__DELETE_LATER/: AUTO-DEVOPS.md  AUTOMATION-SUMMARY.md  AUTOMATION.md  CLEANUP_PLAN.md  FINAL_REPORT.md  MIGRATION_COMPLETE.md  MIGRATION_COMPLETE_SUMMARY.md  PRE_MERGE_STATE.md  RECOVERY_SUCCESS.md  WORKTREE_MERGE_PLAN.md  agent-migration-audit.md  api-inventory.md  architecture.md  audit-delete-later.ts  best-practices.md  features.md  lerna.json  package-lock.json  roadmap_meta.json  security.md  test-results.json  test-simple-auditor.js  test-validator-v0.1.8.js  tsconfig.json  turbo.json
__REBUILD/: .gitignore  .gitlab-ci.yml  01-BRANCHING_STRATEGY.md  FILE_INDEX.md  README.md  REBUILD_RECOMMENDATIONS.md  ROADMAP.md  demo-registry.ts  jest.config.js  package-lock.json  package.json  playwright.config.ts  settings.local.json  tsconfig.json
adapters/: __init__.py
adapters/agentscope/: .env.example  Dockerfile  README.md  __init__.py  a2a_server.py  adapter.py  cli.py  docker-compose.yml  factory.py  mcp-config.example.json  mcp_server.py  models.py  pyproject.toml
adapters/agentscope/tests/: test_adapter.py  test_models.py
api/: openapi.json
bot/: .eslintrc.json  discord-bot.ossa.yaml  package.json
bridge-server/: .env.example  .gitignore  Dockerfile  IMPLEMENTATION_SUMMARY.md  INTEGRATION.md  NEXT_STEPS.md  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  docker-compose.yml  package.json
capability-mapping-analyzer/: README.md  agent.yml  openapi.yaml
cli/: .eslintrc.json  README-ENHANCED.md  package.json  tsconfig.json
cli-creation-architect/: README.md  agent.yml  openapi.yaml
code-assistant/: agent-card.json
config-validation-expert/: README.md  agent.yml  (+1 more)
sdk/python/: pyproject.toml
sdk/python/src/ossa_uadp/: __init__.py  client.py  conformance.py  server.py  types.py  validate.py
sdks/python/: CONTRIBUTING.md  QUICKSTART.md  pyproject.toml
sdks/python/examples/: enterprise_quickstart.py
sdks/python/ossa/: __init__.py  exceptions.py  manifest.py  types.py  validator.py
sdks/python/tests/: __init__.py
src/sdks/python/: .gitignore  CLOUDEVENTS_IMPLEMENTATION.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  QUICKSTART.md  README.md  SDK_SUMMARY.md  pyproject.toml  verify_baggage.py
src/sdks/python/examples/: README.md  basic_usage.py  cloudevents_example.py  complete_agent_example.py  distributed_tracing_example.py
src/sdks/python/ossa/: __init__.py  agent.py  agent_card.py  builders.py  cli.py  exceptions.py  manifest.py  structure.py  task.py  types.py  validator.py  workflow.py
src/sdks/python/ossa/adapters/: __init__.py  anthropic.py  base.py  openai.py
src/sdks/python/ossa/bridges/: __init__.py  crewai.py  langchain.py  openai_agents.py
src/sdks/python/ossa/crud/: __init__.py  controller.py  repository.py  service.py
src/sdks/python/ossa/events/: QUICKREF.md  README.md  __init__.py  cloudevents.py  formatters.py  sinks.py
src/sdks/python/ossa/tracing/: IMPLEMENTATION.md  README.md  __init__.py  context.py  correlation.py  py.typed  w3c_baggage.py
src/sdks/python/tests/: __init__.py  _testdata.py  conftest.py  test_bridges.py  test_builders.py  test_cloudevents.py  test_events.py  test_manifest.py  test_tracing.py  test_types.py  test_validator.py  test_w3c_baggage.py
(+7536 files in other folders)
