[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ossa-uadp"
version = "0.1.0"
description = "Universal AI Discovery Protocol (UADP) client and server SDK"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
keywords = ["uadp", "ossa", "agent", "discovery", "federation", "ai"]
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
server = ["fastapi>=0.115.0", "uvicorn>=0.30.0"]
test = ["pytest>=8.0", "pytest-asyncio>=0.24", "pytest-httpx>=0.30"]

[project.scripts]
uadp-test = "ossa_uadp.conformance:main"
