[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ossa-sdk"
version = "0.3.0"
description = "Python SDK for Open Standard for Scalable AI Agents (OSSA)"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "OSSA Contributors", email = "hello@openstandardagents.org"}
]
keywords = ["ossa", "ai", "agents", "llm", "multi-agent", "orchestration"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "jsonschema>=4.0.0",
    "click>=8.0.0",
    "rich>=13.0.0",
    "requests>=2.28.0",
    "typing-extensions>=4.5.0",
]

[project.optional-dependencies]
# LLM provider integrations
anthropic = ["anthropic>=0.25.0"]
openai = ["openai>=1.0.0"]
google = ["google-generativeai>=0.3.0"]
azure = ["openai>=1.0.0"]
groq = ["groq>=0.4.0"]
ollama = ["ollama>=0.1.0"]

# Framework integrations
langchain = ["langchain>=0.1.0"]
llamaindex = ["llama-index>=0.10.0"]
autogen = ["pyautogen>=0.2.0"]
crewai = ["crewai>=0.1.0"]

# All LLM providers
all-llm = [
    "anthropic>=0.25.0",
    "openai>=1.0.0",
    "google-generativeai>=0.3.0",
    "groq>=0.4.0",
]

# All frameworks
all-frameworks = [
    "langchain>=0.1.0",
    "llama-index>=0.10.0",
]

# Development tools
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
    "types-pyyaml>=6.0.0",
    "types-requests>=2.28.0",
]

# Everything (all providers + frameworks + dev tools)
all = [
    "anthropic>=0.25.0",
    "openai>=1.0.0",
    "google-generativeai>=0.3.0",
    "groq>=0.4.0",
    "langchain>=0.1.0",
    "llama-index>=0.10.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
    "types-pyyaml>=6.0.0",
    "types-requests>=2.28.0",
]

[project.urls]
Homepage = "https://openstandardagents.org"
Documentation = "https://openstandardagents.org/docs"
Repository = "https://gitlab.com/blueflyio/openstandardagents"
"Bug Tracker" = "https://gitlab.com/blueflyio/openstandardagents/-/issues"

[project.scripts]
ossa = "ossa.cli:main"

[tool.setuptools]
packages = ["ossa"]

[tool.setuptools.package-data]
ossa = ["py.typed"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py39"
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=ossa --cov-report=term-missing --cov-report=html"
